--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -10,7 +10,7 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
-  background-color: #dedede;
+  background-color: #ffffff;
   border-radius: 1rem;
   text-align: center;
 }
@@ -20,7 +20,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  background-color: #dedede;
+  background-color: #ffffff;
   border-radius: 1rem;
 }
 
@@ -29,7 +29,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  background-color: #dedede;
+  background-color: #ffffff;
   border-radius: 1rem;
 }
 
