--- a/src/app/donut-chart/donut-chart.component.html
+++ b/src/app/donut-chart/donut-chart.component.html
@@ -1,5 +1,5 @@
 <svg height="20" width="20" viewBox="0 0 20 20">
-  <circle r="10" cx="10" cy="10" fill="#dedede" />
+  <circle r="10" cx="10" cy="10" fill="#DEF6FD" />
   <circle
     r="5"
     cx="10"
