--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -37,14 +37,24 @@
   background-color: green;
   padding: 1rem;
   border-radius: 1rem;
+  border: none;
 }
-
+.clock-in-button:focus {
+  outline: 0px;
+  border: none;
+  background-color: rgb(2, 92, 2);
+}
 .clock-out-button {
-  background-color: red;
+  background-color: rgb(245, 51, 51);
   padding: 1rem;
   border-radius: 1rem;
+  border: none;
 }
-
+.clock-out-button:focus {
+  outline: 0px;
+  border: none;
+  background-color: rgb(199, 5, 5);
+}
 .material-icons {
   font-size: 2.8125rem;
 }
