--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -14,6 +14,13 @@
   border-radius: 1rem;
   text-align: center;
 }
+.informationP {
+  display: flex;
+  text-align: center;
+}
+p {
+  text-align: center;
+}
 
 .start-registration {
   display: flex;
@@ -23,7 +30,6 @@
   background-color: #ffffff;
   border-radius: 1rem;
 }
-
 .stop-registration {
   display: flex;
   flex-direction: column;
@@ -31,6 +37,9 @@
   justify-content: space-around;
   background-color: #ffffff;
   border-radius: 1rem;
+}
+button {
+  margin-top: 0.5rem;
 }
 
 .clock-in-button {
