Add <h4> in dashboard.component.html.

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -24,7 +24,11 @@
 
 <div class="flex-container">
   <div class="start-registration">
-    <div>Rozpocznij rejetrowanie pracy</div>
+    <div>
+      <h4>
+        Rozpocznij rejestrowanie pracy
+      </h4>
+    </div>
     <button (click)="clockIn()" class="clock-in-button">
       <i class="material-icons">access_time</i>
     </button>
@@ -43,7 +47,11 @@
   </div>
 
   <div class="stop-registration">
-    <div>Zakończ rejestrowanie pracy</div>
+    <div>
+      <h4>
+        Zakończ rejestrowanie pracy
+      </h4>
+    </div>
     <button (click)="clockOut()" class="clock-out-button">
       <i class="material-icons">access_time</i>
     </button>
