Show time in history in local time.

--- a/src/app/clock-in-out-history/clock-in-out-history.component.html
+++ b/src/app/clock-in-out-history/clock-in-out-history.component.html
@@ -8,7 +8,7 @@
           [ngClass]="{ 'odd-li': odd == true }"
         >
           {{ element.date | date: "dd MMMM yyyy" | removeWhiteSpace }}
-          {{ element.date | date: "mediumTime" }}
+          {{ element.date + "Z" | date: "mediumTime" }}
         </li>
       </ul>
     </div>
@@ -20,7 +20,7 @@
           [ngClass]="{ 'odd-li': odd == true }"
         >
           {{ element.date | date: "dd MMMM yyyy" | removeWhiteSpace }}
-          {{ element.date | date: "mediumTime" }}
+          {{ element.date + "Z" | date: "mediumTime" }}
         </li>
       </ul>
     </div>
