.history-container CSS class has justify-content set on center.

--- a/src/app/clock-in-out-history/clock-in-out-history.component.css
+++ b/src/app/clock-in-out-history/clock-in-out-history.component.css
@@ -12,13 +12,10 @@
 }
 .history-container {
   margin-bottom: auto;
-
   display: flex;
   align-items: center;
-  justify-content: space-around;
-
+  justify-content: center;
   background-color: #ffffff;
-
   border-radius: 5rem;
 }
 .history {
@@ -57,7 +54,7 @@ ul {
 }
 @media (min-width: 992px) {
   li {
-    font-size: 1.5rem;
+    font-size: 1.3125rem;
     word-spacing: 7rem;
     letter-spacing: 0.25rem;
   }
