Get body from getLastClockInTime().

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -14,6 +14,9 @@
       <p id="out" *ngIf="workStatus === 0">System Nie Rejestruje pracy</p>
     </div>
     <div>
+      <p>{{ this?.clockInTimeDto }}</p>
+    </div>
+    <div>
       <h3>Aktualny bilans</h3>
       <h4 class="balance-on-plus" *ngIf="balanceData?.hoursLeft < 0">
         + {{ balanceData.hoursLeft | makePositive }}h
