Show time if user is clocked in.

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -14,7 +14,7 @@
       <p id="out" *ngIf="workStatus === 0">System Nie Rejestruje pracy</p>
     </div>
     <div>
-      <p>{{ this?.clockInTimeDto }}</p>
+      <p>{{ this?.timer }}</p>
     </div>
     <div>
       <h3>Aktualny bilans</h3>
