--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -35,6 +35,7 @@ p {
   justify-content: space-around;
   background-color: #ffffff;
   border-radius: 1rem;
+  text-align: center;
 }
 .stop-registration {
   display: flex;
@@ -43,6 +44,7 @@ p {
   justify-content: space-around;
   background-color: #ffffff;
   border-radius: 1rem;
+  text-align: center;
 }
 button {
   margin-top: 0.5rem;
@@ -80,6 +82,11 @@ button {
   .material-icons {
     font-size: 3rem;
   }
+  .balance {
+    display: flex;
+    flex-direction: column;
+    margin-top: 2rem;
+  }
 }
 @media (min-width: 768px) {
   .flex-container {
@@ -88,6 +95,10 @@ button {
   .material-icons {
     font-size: 4rem;
   }
+  .balance {
+    display: flex;
+    flex-direction: row;
+  }
 }
 @media (min-width: 992px) {
   .flex-container {
@@ -95,6 +106,10 @@ button {
   }
   .material-icons {
     font-size: 5rem;
+  }
+  .balance {
+    display: flex;
+    flex-direction: row;
   }
 }
 
